7. Added ExitGame.cs to Scene1.
8. Fixed issue with scene switch to Scene 2 happening before interaction with classmate.
9. Changed Lighting in Scene 1 to Baked.

# 04/21/2016
1. Added roof, door and wall to Scene 3.
2. Changed Lighting in Scene 3 to No Shadows from Soft and Ambient GI to Baked from Relatime.
3. Removed extra audio files from assets.
4. Added lipsync to Doctor character in scene3.
5. Added reunion banner in scene1.
6. Changed Nurse animation.
7. Added reunion banner.
8. Added the character rotation script to make the virtual human always look at the FPS controller.
9. Added images for paper.
10. Changes to ProcrastinationScript.cs for events in Scene2.
11. Added Patient animations in scene2 and scene3
12. Fixed few bugs in Scene 3 and adjusted height to match to the character

# 04/22/2016
1. Added crowd audio and ambient music in Scene 4.
2. Updated Readme.md.
3. Added animation to Fan in Scene 2.
4. Added images for paper and web search.
5. Changes to ProcrastinationScript.cs [Not Working.]
6. Added Doctor Room Script!

# 04/23/2016
1. Changes to ProcrastinationScript.cs.
2. Removed some images from Assets/PaperImages.
3. Added ambient audio to Scene 3.
4. Added idle animation to Doctor and changes to DoctorRoom.cs.

# 04/24/2016
1. Changes to ClassroomScript.cs, DoctorRoom.cs.
2. Added ReunionScript.cs.
3. Lighting changes in Scene 4.
4. Added audio for mom and changes to ProcrastinationScript.cs.

# 04/25/2016
1. Added PS4 Square and Circle mappings in Scripts.
2. Changed Quality to Fastest for Android.
3. Updated build settings.

# 04/26/2016
1. Added audio for player.
2. Changes to ProcrastinationScript.cs.

# 04/27/2016
1. Changed audio settings in scene 2.
2. Added bottles models to scene 4.
3. Changed mapping to XBOX controllers and created static lightmaps.
4. Changed Rolloff mode of laptop noises to Linear and changed default rotation of Cardboardmain.
5. Changes to scripts and added audio clips.