@@ -1775,6 +1775,7 @@ GameObject:
   - 114: {fileID: 724156135}
   - 114: {fileID: 724156140}
   - 114: {fileID: 724156141}
+  - 114: {fileID: 724156142}
   m_Layer: 2
   m_Name: FPSController
   m_TagString: Untagged
@@ -1821,7 +1822,7 @@ AudioSource:
   serializedVersion: 4
   OutputAudioMixerGroup: {fileID: 0}
   m_audioClip: {fileID: 0}
-  m_PlayOnAwake: 1
+  m_PlayOnAwake: 0
   m_Volume: 1
   m_Pitch: 1
   Loop: 0
@@ -2040,6 +2041,7 @@ MonoBehaviour:
     type: 2}
   classmateNegativeLipSyncData: {fileID: 11400000, guid: ed292592f0d9ef34b80906dbdbed9ad7,
     type: 2}
+  userMomDoctorClip: {fileID: 8300000, guid: f0e48fcd4fd83154cb066f1d97750756, type: 3}
 --- !u!114 &724156141
 MonoBehaviour:
   m_ObjectHideFlags: 0
@@ -2051,6 +2053,31 @@ MonoBehaviour:
   m_Script: {fileID: 11500000, guid: 8fabecb828612a84b8404e5090f126a5, type: 3}
   m_Name: 
   m_EditorClassIdentifier: 
+--- !u!114 &724156142
+MonoBehaviour:
+  m_ObjectHideFlags: 0
+  m_PrefabParentObject: {fileID: 0}
+  m_PrefabInternal: {fileID: 0}
+  m_GameObject: {fileID: 724156133}
+  m_Enabled: 1
+  m_EditorHideFlags: 0
+  m_Script: {fileID: 11500000, guid: 6dbca64e524ea44f9b26142ec59aca8a, type: 3}
+  m_Name: 
+  m_EditorClassIdentifier: 
+  directivityAlpha: 0
+  directivitySharpness: 1
+  gainDb: 0
+  occlusionEnabled: 0
+  playOnAwake: 0
+  rolloffMode: 0
+  sourceClip: {fileID: 8300000, guid: f0e48fcd4fd83154cb066f1d97750756, type: 3}
+  sourceLoop: 0
+  sourceMute: 0
+  sourcePitch: 1
+  sourceVolume: 1
+  sourceMaxDistance: 500
+  sourceMinDistance: 0
+  hrtfEnabled: 1
 --- !u!1 &800802200 stripped
 GameObject:
   m_PrefabParentObject: {fileID: 100000, guid: f43895422c5b6cc46bd4dee3435e38f1, type: 3}
