@@ -112,3 +112,4 @@
 3. Changed mapping to XBOX controllers and created static lightmaps.
 4. Changed Rolloff mode of laptop noises to Linear and changed default rotation of Cardboardmain.
 5. Changes to scripts and added audio clips.
+6. Changes to Scene1 and ClassroomScript.cs.
